// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: blue;
  border-style: dashed;
  border-width: 1px;
  grid-template-columns: repeat(18,1fr);
  display: grid;
  width: 100%;
}

.c1 {
  background: rgba(25,25,25,0.3);
  border: 1px dotted black;
  text-align: center;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    1
  </div>
  <div
    class="c1"
  >
    2
  </div>
  <div
    class="c1"
  >
    3
  </div>
  <div
    class="c1"
  >
    4
  </div>
  <div
    class="c1"
  >
    5
  </div>
  <div
    class="c1"
  >
    6
  </div>
  <div
    class="c1"
  >
    7
  </div>
  <div
    class="c1"
  >
    8
  </div>
  <div
    class="c1"
  >
    9
  </div>
  <div
    class="c1"
  >
    10
  </div>
  <div
    class="c1"
  >
    11
  </div>
  <div
    class="c1"
  >
    12
  </div>
  <div
    class="c1"
  >
    13
  </div>
  <div
    class="c1"
  >
    14
  </div>
  <div
    class="c1"
  >
    15
  </div>
  <div
    class="c1"
  >
    16
  </div>
  <div
    class="c1"
  >
    17
  </div>
  <div
    class="c1"
  >
    18
  </div>
</div>
`;

exports[`Grid with "fullsize" renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: blue;
  border-style: dashed;
  border-width: 1px;
  grid-template-columns: repeat(18,1fr);
  display: grid;
  width: 100%;
}

.c1 {
  background: rgba(25,25,25,0.3);
  border: 1px dotted black;
  text-align: center;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    1
  </div>
  <div
    class="c1"
  >
    2
  </div>
  <div
    class="c1"
  >
    3
  </div>
  <div
    class="c1"
  >
    4
  </div>
  <div
    class="c1"
  >
    5
  </div>
  <div
    class="c1"
  >
    6
  </div>
  <div
    class="c1"
  >
    7
  </div>
  <div
    class="c1"
  >
    8
  </div>
  <div
    class="c1"
  >
    9
  </div>
  <div
    class="c1"
  >
    10
  </div>
  <div
    class="c1"
  >
    11
  </div>
  <div
    class="c1"
  >
    12
  </div>
  <div
    class="c1"
  >
    13
  </div>
  <div
    class="c1"
  >
    14
  </div>
  <div
    class="c1"
  >
    15
  </div>
  <div
    class="c1"
  >
    16
  </div>
  <div
    class="c1"
  >
    17
  </div>
  <div
    class="c1"
  >
    18
  </div>
</div>
`;

exports[`Grid with "narrow" renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: blue;
  border-style: dashed;
  border-width: 1px;
  grid-template-columns: repeat(16,1fr);
  display: grid;
  width: 100%;
}

.c1 {
  background: rgba(25,25,25,0.3);
  border: 1px dotted black;
  text-align: center;
}

@media (min-width:768px) {
  .c0 {
    grid-template-columns: repeat(8,1fr);
  }
}

@media (min-width:1200px) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    1
  </div>
  <div
    class="c1"
  >
    2
  </div>
  <div
    class="c1"
  >
    3
  </div>
  <div
    class="c1"
  >
    4
  </div>
  <div
    class="c1"
  >
    5
  </div>
  <div
    class="c1"
  >
    6
  </div>
  <div
    class="c1"
  >
    7
  </div>
  <div
    class="c1"
  >
    8
  </div>
</div>
`;

exports[`Grid with "regular" renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: blue;
  border-style: dashed;
  border-width: 1px;
  grid-template-columns: repeat(16,1fr);
  display: grid;
  width: 100%;
}

.c1 {
  background: rgba(25,25,25,0.3);
  border: 1px dotted black;
  text-align: center;
}

@media (min-width:768px) {
  .c0 {
    grid-template-columns: repeat(14,1fr);
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    1
  </div>
  <div
    class="c1"
  >
    2
  </div>
  <div
    class="c1"
  >
    3
  </div>
  <div
    class="c1"
  >
    4
  </div>
  <div
    class="c1"
  >
    5
  </div>
  <div
    class="c1"
  >
    6
  </div>
  <div
    class="c1"
  >
    7
  </div>
  <div
    class="c1"
  >
    8
  </div>
  <div
    class="c1"
  >
    9
  </div>
  <div
    class="c1"
  >
    10
  </div>
  <div
    class="c1"
  >
    11
  </div>
  <div
    class="c1"
  >
    12
  </div>
  <div
    class="c1"
  >
    13
  </div>
  <div
    class="c1"
  >
    14
  </div>
</div>
`;

exports[`Grid with "rowGap" renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: blue;
  border-style: dashed;
  border-width: 1px;
  grid-template-columns: repeat(16,1fr);
  row-gap: clamp(25px,5.55vw,100px);
  display: grid;
  width: 100%;
}

.c1 {
  background: rgba(25,25,25,0.3);
  border: 1px dotted black;
  text-align: center;
}

@media (min-width:768px) {
  .c0 {
    grid-template-columns: repeat(8,1fr);
  }
}

@media (min-width:1200px) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    1
  </div>
  <div
    class="c1"
  >
    2
  </div>
  <div
    class="c1"
  >
    3
  </div>
  <div
    class="c1"
  >
    4
  </div>
  <div
    class="c1"
  >
    5
  </div>
  <div
    class="c1"
  >
    6
  </div>
  <div
    class="c1"
  >
    7
  </div>
  <div
    class="c1"
  >
    8
  </div>
  <div
    class="c1"
  >
    9
  </div>
  <div
    class="c1"
  >
    10
  </div>
</div>
`;
